@@ -1,6 +1,7 @@
 import React from 'react';
 import styled from '@emotion/styled';
 import PaymentMethodMissingCurrencyPill from '../../components/payment-method-missing-currency-pill';
+import PaymentMethodCapabilityStatusPill from 'wcstripe/components/payment-method-capability-status-pill';
 
 const Wrapper = styled.div`
 	display: flex;
@@ -53,6 +54,10 @@ const PaymentMethodDescription = ( {
 				<LabelWrapper>
 					<Label>{ label }</Label>
 					<PaymentMethodMissingCurrencyPill
+						id={ id }
+						label={ label }
+					/>
+					<PaymentMethodCapabilityStatusPill
 						id={ id }
 						label={ label }
 					/>
